Fixed padding of delete account button on mobile.

--- a/src/components/content/ContentSettings.scss
+++ b/src/components/content/ContentSettings.scss
@@ -185,6 +185,9 @@
           .switch-container.account {
             padding: 0;
           }
+          .delete-container {
+            padding: 0;
+          }
         }
         &:not(:last-child) {
           @include util.divider-border(bottom);
